fix missing background color bug

--- a/assets/styles/components/header.css
+++ b/assets/styles/components/header.css
@@ -34,6 +34,6 @@
 	padding: 0 16px 0 12px;
 	color: var(--color-white);
 	font-size: var(--font-size-s);
-	font-family: var(--font-bold);
-	background: var(--color-primary), sans-serif;
+	background: var(--color-primary);
+	font-family: var(--font-bold), sans-serif;
 }
